--- a/03-Algorithme/Algorithme.tex
+++ b/03-Algorithme/Algorithme.tex
@@ -128,26 +128,28 @@ Les expériences faites sur l'architecture se décomposent en une phases d'appre
 
 \subsubsection{Récapitulatif}
 
-\begin{algorithm}
-  \DontPrintSemicolon 
-  \SetKwComment{Comment}{}{}
-  \caption{Learning iteration with relaxation process}\label{algo:cxsom}
-  \KwInput{$\inpx\m{1}, ... , \inpx\m{K} \leftarrow (o^1, \cdots , o^K)\in \mathcal{D}^1 \times \cdot \times \mathcal{D}^K$}
-   $t \leftarrow 0$ \;
-   $\forall i , \bmu\m{i} \leftarrow \argmax_p a\ext(\inpx\m{i},p)$\;
-  \While {$\mathbf{\bmu}(t) \neq \mathbf{ \bmu}(t-1)$}{
-  \ForAll{Map $i$}{
-  $\inpc\m{i}_1,...\inpc\m{i}_k \leftarrow$ BMUs from connected maps \;
-  Computation of $a_g^i$ (equation~\ref{activity}) \;
-  $p\star\m{i} \leftarrow \argmax_p a_g^i(p)$ \;
-  $\bmu\m{i} \leftarrow \bmu\m{i} + min(\Delta, \lvert p\star\m{i} - \bmu\m{i} \rvert) \times \sign(p\star\m{i} - \bmu\m{i})$ \;
-  }
-  $t \leftarrow t+1$ \;
-  }
-  $\forall i, \w\ext\m{i}(p) \leftarrow \w\ext\m{i}(p) + H\ext(\bmu\m{i}, p)(\w\ext\m{i}(p) - \inpx\m{i})$\;
-  $\forall i, \forall k, \w_{ck}\m{i}(p) \leftarrow \w_{ck}\m{i}(p) + H\cont(\bmu\m{i},p)(\w_{ck}\m{i}(p) - \inpc\m{i})$
-\end{algorithm}
- 
+%\begin{algorithm}
+%  \DontPrintSemicolon 
+%  \SetKwComment{Comment}{}{}
+%  \caption{Learning iteration with relaxation process}\label{algo:cxsom}
+%  \KwInput{$\inpx\m{1}, ... , \inpx\m{K} \leftarrow (o^1, \cdots , o^K)\in \mathcal{D}^1 \times \cdot \times \mathcal{D}^K$}
+%   $t \leftarrow 0$ \;
+%   $\forall i , \bmu\m{i} \leftarrow \argmax_p a\ext(\inpx\m{i},p)$\;
+%  \While {$\mathbf{\bmu}(t) \neq \mathbf{ \bmu}(t-1)$}{
+%  \ForAll{Map $i$}{
+%  $\inpc\m{i}_1,...\inpc\m{i}_k \leftarrow$ BMUs from connected maps \;
+%  Computation of $a_g^i$ (equation~\ref{activity}) \;
+%  $p\star\m{i} \leftarrow \argmax_p a_g^i(p)$ \;
+%  $\bmu\m{i} \leftarrow \bmu\m{i} + min(\Delta, \lvert p\star\m{i} - \bmu\m{i} \rvert) \times \sign(p\star\m{i} - \bmu\m{i})$ \;
+%  }
+%  $t \leftarrow t+1$ \;
+%  }
+%  $\forall i, \w\ext\m{i}(p) \leftarrow \w\ext\m{i}(p) + H\ext(\bmu\m{i}, p)(\w\ext\m{i}(p) - \inpx\m{i})$\;
+%  $\forall i, \forall k, \w_{ck}\m{i}(p) \leftarrow \w_{ck}\m{i}(p) + H\cont(\bmu\m{i},p)(\w_{ck}\m{i}(p) - \inpc\m{i})$
+%\end{algorithm}
+
+
+
 
 \section{Choix des paramètres}
 
