--- a/biblio_modularite.bib
+++ b/biblio_modularite.bib
@@ -1,5 +1,24 @@
+% Contexte, systèmes complexes
 
+@article{Horvth2009AnED,
+  title={An Experimental Design Method Leading to Chemical Turing Patterns},
+  author={Judit Horv{\'a}th and Istv{\'a}n Szalai and Patrick De Kepper},
+  journal={Science},
+  year={2009},
+  volume={324},
+  pages={772 - 775}
+}
+
+@article{Milgram1967TheSW,
+  title={The Small World Problem},
+  author={S Milgram},
+  journal={Psychology today},
+  year={1967},
+  volume={2},
+  pages={60-67}
+}
 %Inspiration biologique
+
 @article{primate_cortex_91,
 title={Distributed Hierarchical Processing
 in the Primate Cerebral Cortex},
@@ -89,6 +108,27 @@ Musio}
   year={2012},
   volume={7}
 }
+
+
+@article{biyu_scale-free_2014,
+	title = {Scale-free brain activity: past, present, and future},
+	volume = {18},
+	number = {9},
+	journal = {Trends in Cognitive Sciences},
+	author = {Biyu, J. He},
+	month = sep,
+	year = {2014},
+	file = {Biyu - 2014 - Scale-free brain activity past, present, and futu.pdf:/home/noemie/Zotero/storage/2YQAPIW2/Biyu - 2014 - Scale-free brain activity past, present, and futu.pdf:application/pdf},
+}
+
+@article{Barabasi2003ScaleFreeN,
+  title={Scale-Free Networks.},
+  author={A. L. Barabasi and Eric Bonabeau},
+  journal={Scientific American},
+  year={2003},
+  volume={288},
+  pages={60-69}
+}
 % Aspect computationel 
 
 @article{towards_novel_2001,
@@ -128,6 +168,7 @@ booktitle={Emergent Neural Computational Architectures, LNAI}
 }
 
 %Exemples d'architectures modulaires 
+
 @inproceedings{lefort_active_2015,
 	title = {Active learning of local predictable representations with artificial curiosity},
 	booktitle = {2015 {Joint} {IEEE} {International} {Conference} on {Development} and {Learning} and {Epigenetic} {Robotics} ({ICDL}-{EpiRob})},
