--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %Documentclass thesul modifée pour mettre les logos CS : thesul-cs
-\documentclass{thesul-cs}
+\documentclass[11pt]{thesul-cs}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
@@ -15,6 +15,9 @@
 \fancyhead[LO]{\rightmark}
 \fancyhead[RE]{\leftmark}
 
+%mini table of contents
+\usepackage[french]{minitoc}
+
 \usepackage{amssymb}
 \usepackage{color} % où xcolor selon l'installation
 \usepackage{mdframed}
@@ -26,7 +29,7 @@
 \usepackage[absolute]{textpos} 
 \usepackage{colortbl}
 \usepackage{array}
-
+\usepackage{url}
 \usepackage{algorithm2e}
 \SetAlCapSkip{1em}
 \SetKwInput{KwInput}{Input}
@@ -34,10 +37,12 @@
 \usepackage{mathtools}
 \DeclareMathOperator{\sign}{sgn}
 
+
 %def path for files
 \input{Notations.tex}
 
 \begin{document}
+\dominitoc
 \input{titlepage}
 \tableofcontents
 \input{00-Introduction/Introduction}
