--- a/biblio_modularite.bib
+++ b/biblio_modularite.bib
@@ -17,6 +17,35 @@
   volume={2},
   pages={60-67}
 }
+
+@article{Clauset2008HierarchicalSA,
+  title={Hierarchical structure and the prediction of missing links in networks},
+  author={Aaron Clauset and Cristopher Moore and Mark E. J. Newman},
+  journal={Nature},
+  year={2008},
+  volume={453},
+  pages={98-101}
+}
+
+@article{Ravasz2002HierarchicalOO,
+  title={Hierarchical Organization of Modularity in Metabolic Networks},
+  author={Erzs{\'e}bet Ravasz and Audrey Somera and D A Mongru and Zolt{\'a}n N. Oltvai and A.-L. Barabasi},
+  journal={Science},
+  year={2002},
+  volume={297},
+  pages={1551 - 1555}
+}
+
+@article{Telesford2011TheUO,
+  title={The Ubiquity of Small-World Networks},
+  author={Qawi K. Telesford and Karen E. Joyce and Satoru Hayasaka and Jonathan H. Burdette and Paul J. Laurienti},
+  journal={Brain connectivity},
+  year={2011},
+  volume={1 5},
+  pages={
+          367-75
+        }
+}
 %Inspiration biologique
 
 @article{primate_cortex_91,
@@ -167,6 +196,15 @@ booktitle={Emergent Neural Computational Architectures, LNAI}
   year={2001}
 }
 
+@article{Pan2009ModularityPS,
+  title={Modularity produces small-world networks with dynamical time-scale separation},
+  author={Raj Kumar Pan and Sitabhra Sinha},
+  journal={EPL},
+  year={2009},
+  volume={85},
+  pages={68006}
+}
+
 %Exemples d'architectures modulaires 
 
 @inproceedings{lefort_active_2015,
@@ -262,7 +300,7 @@ booktitle={Emergent Neural Computational Architectures, LNAI}
 
 @article{Csordas2021AreNN,
   title={Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks},
-  author={R'obert Csord'as and Sjoerd van Steenkiste and J. Schmidhuber},
+  author={Robert Csordas and Sjoerd van Steenkiste and J. Schmidhuber},
   journal={ArXiv},
   year={2021},
   volume={abs/2010.02066}
